--- a/admin/themes/simplebootx/Portal/AdminCurriculum/add.html
+++ b/admin/themes/simplebootx/Portal/AdminCurriculum/add.html
@@ -34,15 +34,14 @@
 							</td>
 						</tr>
 						<tr>
-							<th>适合人群：</th>
-							<td>
-								<input type="text" style="width:400px;" name="post[leixing]" id="title" required value="" placeholder="请输入课程适合人群"/>
-								<span class="form-required">*</span>
-							</td>
-						</tr>
-						<tr>
 							<th>关键词</th>
 							<td><input type="text" name="post[post_keywords]" id="keywords" value="" style="width: 400px" placeholder="请输入关键字"> 多关键词之间用空格或者英文逗号隔开</td>
+						</tr>
+						<tr>
+							<th>适合人群：</th>
+							<td>
+								<textarea name="post[leixing]" style="width: 98%; height: 50px;" placeholder="请填写课程适合人群"></textarea>
+							</td>
 						</tr>
 						<tr>
 							<th>课程简介：</th>
@@ -211,9 +210,6 @@
 						'post[post_title]' : {
 							required : 1
 						},
-						'post[leixing]' : {
-							required : 1
-						},
 						'post[post_content]' : {
 							editorcontent : true
 						}
@@ -222,9 +218,6 @@
 					messages : {
 						'post[post_title]' : {
 							required : '请输入课程名称'
-						},
-						'post[leixing]' : {
-							required : '请输入课程适合人群'
 						},
 						'post[post_content]' : {
 							editorcontent : '课程介绍不能为空'
