--- a/admin/themes/simplebootx/Portal/AdminCurriculum/edit.html
+++ b/admin/themes/simplebootx/Portal/AdminCurriculum/edit.html
@@ -36,17 +36,16 @@
 							</td>
 						</tr>
 						<tr>
-							<th>适合人群：</th>
-							<td>
-								<input type="text" style="width:400px;" name="post[leixing]" id="title" required value="{$post.leixing}" placeholder="请输入课程适合人群"/>
-								<span class="form-required">*</span>
-							</td>
-						</tr>
-						<tr>
 							<th>关键词</th>
 							<td>
 								<input type="text" name="post[post_keywords]" style="width: 400px" value="{$post['post_keywords']}" placeholder="请输入关键字">
 								多关键词之间用空格或者英文逗号隔开
+							</td>
+						</tr>
+						<tr>
+							<th>适合人群：</th>
+							<td>
+								<textarea name="post[leixing]" style="width: 98%; height: 70px;" placeholder="请填写课程适合人群">{$post.leixing}</textarea>
 							</td>
 						</tr>
 						<tr>
@@ -229,9 +228,6 @@
 						'post[post_title]' : {
 							required : 1
 						},
-						'post[leixing]' : {
-							required : 1
-						},
 						'post[post_content]' : {
 							editorcontent : true
 						}
@@ -240,9 +236,6 @@
 					messages : {
 						'post[post_title]' : {
 							required : '请输入课程名称'
-						},
-						'post[leixing]' : {
-							required : '请输入课程适合人群'
 						},
 						'post[post_content]' : {
 							editorcontent : '课程介绍不能为空'
