--- a/themes/hipro_mobile/Portal/contact.html
+++ b/themes/hipro_mobile/Portal/contact.html
@@ -77,7 +77,7 @@
 
 			<div class="main-box">
 				<div class="box">
-					<p style="width:220px;text-align:center;margin:0 auto;"><img src="__TMPL__Public/assets/images/erweima.png" alt=""></p>
+					<p style="width:220px;text-align:center;margin:0 auto;"><img src="{:sp_get_image_url($site_erweima)}" alt=""></p>
 				</div>
 			</div>
 		</div>
