--- a/themes/hipro/Portal/map.html
+++ b/themes/hipro/Portal/map.html
@@ -12,7 +12,7 @@
 	</head>
 <body>
 <section class="wrapper">
-	<iframe src="https://map.baidu.com/mobile/webapp/place/linesearch/foo=bar/from=place&end=word%3D%25E4%25B8%2596%25E8%258C%2582%25E5%259B%25BD%25E9%2599%2585%25E4%25B8%25AD%25E5%25BF%258356%25E5%25B1%25825602%26point%3D13281973.09%252C2989429.01&tab=line&universalLinkCbkTag=1" class="iframecss"></iframe>
+	<iframe src="https://www.amap.com/search?query=%E7%A6%8F%E5%B7%9E%E5%B8%82%E5%8F%B0%E6%B1%9F%E5%8C%BA%E4%B8%96%E8%8C%82%E5%9B%BD%E9%99%85%E4%B8%AD%E5%BF%8356%E5%B1%825602&city=350100&geoobj=119.304078%7C26.067119%7C119.308865%7C26.069505&zoom=18" class="iframecss"></iframe>
 </section>
 
 <tc_include file="Public:scripts"/>
