--- a/themes/hipro/Portal/coach.html
+++ b/themes/hipro/Portal/coach.html
@@ -57,6 +57,7 @@
   <div class="nomore" style="display:none;">-- 没有更多数据 --</div>
 </section>
 
+<tc_include file="Public:footer" />
 <tc_include file="Public:scripts"/>
 <script>
 $(function () {
