--- a/themes/hipro/Portal/page.html
+++ b/themes/hipro/Portal/page.html
@@ -13,6 +13,7 @@
 	{:htmlspecialchars_decode($post_content)}
 </section>
 
+<tc_include file="Public:footer" />
 <tc_include file="Public:scripts"/>
 {:hook('footer_end')}
 </body>
