--- a/themes/hipro/Public/footer.html
+++ b/themes/hipro/Public/footer.html
@@ -1,25 +1,11 @@
 {:hook('footer')}
 <!-- 底部 -->
 <footer id="footer">
-  <div class="f-container">
-    <php>
-      $menu_root_ul_id="foot_nav"; $filetpl="
-      <a href='\$href' target='\$target'>\$label</a>"; $foldertpl="
-      <a class='dropdown-toggle' href='\$href' target='\$target'>\$label</a>"; $ul_class="dropdown-menu"; $li_class="" ; $menu_root_ul_class=""; $showlevel=1; $dropdown='dropdown';
-    </php>
-    <nav>
-      {:sp_get_menu(2,$menu_root_ul_id,$filetpl,$foldertpl,$ul_class,$li_class,$menu_root_ul_class,$showlevel,$dropdown)}
-    </nav>
-    <div class="contact">
-      <p>关注我们</p>
-      <div class="c-box">
-        <a href="mqqwpa://im/chat?chat_type=wpa&uin={$qq}&version=1&src_type=web&web_src=lvlingseeds.com" target="_blank">
-          <img src="__TMPL__Public/assets/images/qq_icon.png" alt="" class="img-responsive"/>
-        </a>
-        <a href="http://mp.weixin.qq.com/s/WN0UMkyl5ti3BdWV_fiuJw">
-          <img src="__TMPL__Public/assets/images/wechat_icon.png" alt="" class="img-responsive"/>
-        </a>
-      </div>
+  <div class="contactbox">
+    <p>地址：{$address}</p>
+    <div class="con">
+      <span>电话：{$tell}</span>
+      <span>邮箱：{$email}</span>
     </div>
   </div>
   <div class="copyright">
