--- a/themes/hipro/Public/nav.html
+++ b/themes/hipro/Public/nav.html
@@ -20,6 +20,6 @@
 			?>
 	</div>
 	<div class="aboutus">
-		
+		<a href="{:leuu('Portal/page/index',array('id'=>1))}">关于我们</a> | <a href="{:leuu('Portal/page/index',array('id'=>2))}">联系我们</a>
 	</div>
 </header>
