--- a/themes/hipro/Portal/404.html
+++ b/themes/hipro/Portal/404.html
@@ -13,6 +13,7 @@
 	<div class="error-container"><p>404 Not Found!</p></div>
 </section>
 
+<tc_include file="Public:footer" />
 <tc_include file="Public:scripts"/>
 {:hook('footer_end')}
 </body>
