--- a/themes/hipro/Portal/contact.html
+++ b/themes/hipro/Portal/contact.html
@@ -17,9 +17,14 @@
 			padding: 0 1rem;
 		}
 
+		.wrapper{background-color: #fff;}
+
 		.contact-wrap {
 			padding: 1rem 0;
 			background-color: #fff;
+			max-width: 1000px;
+			margin: 0 auto;
+			padding-bottom: 30px;
 		}
 
 		.main-box p{
@@ -84,6 +89,7 @@
 		</div>
 	</section>
 
+<tc_include file="Public:footer" />
 	<tc_include file="Public:scripts" />
 	<script src="__TMPL__Public/assets/js/swiper.jquery.min.js"></script>
 	<script>
