--- a/themes/hipro/Portal/detail.html
+++ b/themes/hipro/Portal/detail.html
@@ -22,6 +22,8 @@
     </div>
   </div>
 </section>
+
+<tc_include file="Public:footer" />
 <tc_include file="Public:scripts"/>
 <script>
 $('img').parent('p').addClass('imgbox');
