--- a/themes/hipro/Portal/list.html
+++ b/themes/hipro/Portal/list.html
@@ -52,6 +52,7 @@
   <div class="nomore" style="display:none;">-- 没有更多数据 --</div>
 </section>
 
+<tc_include file="Public:footer" />
 <tc_include file="Public:scripts"/>
 <script>
 $(function () {
