--- a/themes/hipro/Portal/search.html
+++ b/themes/hipro/Portal/search.html
@@ -57,6 +57,7 @@
 		</div>
 	</section>
 
+<tc_include file="Public:footer" />
 	<tc_include file="Public:scripts"/>
 	{:hook('footer_end')}
 	</body>
