--- a/themes/hipro/Public/scripts.html
+++ b/themes/hipro/Public/scripts.html
@@ -7,5 +7,19 @@
   };
 </script>
 <script src="__TMPL__Public/assets/js/jquery.min.js"></script>
+<script src="__PUBLIC__/js/wind.js"></script>
+<script src="__TMPL__Public/assets/js/bootstrap.min.js"></script>
+<script src="__PUBLIC__/js/frontend.js"></script>
 <script src="__TMPL__Public/assets/js/flexible.js"></script>
 <script src="__TMPL__Public/assets/js/swiper.jquery.min.js"></script>
+<script>
+$(function(){
+	$('body').on('touchstart.dropdown', '.dropdown-menu', function (e) { e.stopPropagation(); });
+
+	$("#main-menu li.dropdown").hover(function(){
+		$(this).addClass("open");
+	},function(){
+		$(this).removeClass("open");
+	});
+});
+</script>
