--- a/themes/hipro/Portal/contact.html
+++ b/themes/hipro/Portal/contact.html
@@ -64,7 +64,7 @@
 
 				<div class="box">
 					<h2>WEBSITE,官方网站</h2>
-					<p class="big">www.hipro.com</p>
+					<p class="big">www.hiproclub.com</p>
 				</div>
 
 				<div class="box">
