--- a/admin/themes/simplebootx/Admin/Main/index.html
+++ b/admin/themes/simplebootx/Admin/Main/index.html
@@ -25,8 +25,8 @@ li {
 		<h4 class="well">联系我们</h4>
 		<div class="home_info" id="home_devteam">
 			<ul>
-				<li><em>HIPRO</em> <a href="http://www.hipro.com" target="_blank">www.hipro.com</a></li>
-				<li><em>{:L('CONTACT_EMAIL')}</em> <span>admin@hipro.com</span></li>
+				<li><em>HIPRO</em> <a href="http://www.hiproclub.com" target="_blank">www.hiproclub.com</a></li>
+				<li><em>{:L('CONTACT_EMAIL')}</em> <span>admin@hiproclub.com</span></li>
 			</ul>
 		</div>
 	</div>
