修改分页出现时间

--- a/admin/themes/simplebootx/Admin/login.html
+++ b/admin/themes/simplebootx/Admin/login.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>东西之间室内设计 {:L('ADMIN_CENTER')}</title>
+		<title>HIPRO {:L('ADMIN_CENTER')}</title>
 		<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
 		<meta name="renderer" content="webkit|ie-comp|ie-stand">
 		<meta name="robots" content="noindex,nofollow">
