--- a/themes/hipro/Portal/curriculum.html
+++ b/themes/hipro/Portal/curriculum.html
@@ -19,7 +19,7 @@
 		<?php
 		    $cid = $cat_id;
 		    $tag = "order:listorder asc,post_modified desc;";
-		    $pagesize = '5';
+		    $pagesize = '8';
 		    $content=sp_sql_posts_paged_bycatid($cid,$tag,$pagesize);
 		    $lists = $content['posts'];
 		    $pager=$content['page'];
@@ -58,7 +58,9 @@
         </li>
         </volist>
       </ul>
-      <div class="morebox"><div class="more">查看更多</div></div>
+      <if condition="$content.total_pages gt 1">
+      	<div class="morebox"><div class="more">查看更多</div></div>
+      </if> 
     </div>
 		<else/>
 			<div class="nomore">-- 没有更多数据 --</div>
