--- a/themes/hipro/Portal/mall.html
+++ b/themes/hipro/Portal/mall.html
@@ -47,7 +47,9 @@
         </li>
         </volist>
       </ul>
-      <div class="more">查看更多</div>
+      <if condition="$content.total_pages gt 1">
+      	<div class="more">查看更多</div>
+      </if>
     </div>
 		<else/>
 			<div class="nomore">-- 没有更多数据 --</div>
