--- a/themes/hipro_mobile/Public/footer.html
+++ b/themes/hipro_mobile/Public/footer.html
@@ -5,7 +5,7 @@
     <!--<nav>
       <ul>
         <li><a href="#">订阅资讯</a></li>
-        <li><a href="#">联系东西</a></li>
+        <li><a href="#">联系我们</a></li>
       </ul>
     </nav>-->
     <php>
