联系我们页面修改
联系我们页面修改

--- a/themes/hipro_mobile/Portal/contact.html
+++ b/themes/hipro_mobile/Portal/contact.html
@@ -49,22 +49,22 @@
 			<div class="main-box">
 				<div class="box">
 					<h2>ADD,地址</h2>
-					<p>福州市台江区群众路116号<br/>世茂国际中心56层5602</p>
+					<p>{$address}</p>
 				</div>
 
 				<div class="box">
 					<h2>TEL,电话</h2>
-					<p><small>+86591</small><span>88084389</span></p>
+					<p><small>+860591</small><span>{$tell1}</span></p>
 				</div>
 
 				<div class="box">
 					<h2>WEBSITE,官方网站</h2>
-					<p class="big">www.hiproclub.com</p>
+					<p class="big">{$site_host}</p>
 				</div>
 
 				<div class="box">
 					<h2>E-MAIL,邮箱</h2>
-					<p class="big">hipro@126.com</p>
+					<p class="big">{$email}</p>
 				</div>
 
 				<div style="margin-top:1rem"></div>
